--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,22 +2,15 @@
 <html>
   <head>
     <title>Myapp</title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-    <![endif]-->
-  
+    <%= render 'partial/rails_dafault' %>
+    <%= render 'partial/shim' %>
   </head>
 
   <body>
-    <%= render 'layouts/partial/header' %>
+    <%= render 'partial/header' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
     <%= yield %>
+    <%= render 'partial/footer' %>
   </body>
 </html>
