--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,5 @@
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
- 
-<ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user.email, user %>
-    </li>
-  <% end %>
-</ul>
+<%# <h1>All users</h1> %>
+<div class="container">
+    <%= render 'partial/show_users' %>
+</div>
