--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,42 @@
-<% provide(:title, @user.email) %>
-<h1>My page (<%= @user.email %>)</h1>
-<%= render 'stats' %>
-<%= render 'follow_form' %>
+<% provide(:title, @user.name) %>
+<div class="container">
+    <div class="row">
+        <aside class="col-md-4">
+            <div class="sidebar">
+                <section>
+                    <div class="user-info">
+                        <img class="circle" src="assets/default.png">
+                        <h3><%= @user.name %></h3>
+                    <div>
+                </section>
+                <section>
+                    <%= render 'partial/follow_form' %>
+                </section>
+                <section>
+                    <ul>
+                        <li>
+                            <a href="<%= following_user_path(@user) %>">
+                                <strong id="following" class="stat">
+                                <%= @user.following.count %>
+                                </strong>
+                                フォロー中のユーザー
+                            </a>    
+                        </li>
+                        <li>
+                            <a href="<%= followers_user_path(@user) %>">
+                                <strong id="followers" class="stat">
+                                <%= @user.followers.count %>
+                                </strong>
+                                フォローしてくれたユーザー
+                            </a>
+                        </li>
+                        <li>いいねした投稿一覧</li>
+                    </ul>
+                </section>
+            </div>
+        </aside>
+        <div class="col-md-8">
+            <p>投稿一覧</p>
+        </div>
+    </div>
+</div>
