--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,40 +1,32 @@
 <% provide(:title, @user.name) %>
 <div class="container">
     <div class="row">
-        <aside class="col-md-4">
-            <div class="sidebar">
-                <section>
-                    <div class="user-info">
-                        <img class="circle" src="assets/default.png">
-                        <h3><%= @user.name %></h3>
-                    <div>
-                </section>
-                <section>
-                    <%= render 'partial/follow_form' %>
-                </section>
-                <section>
-                    <ul>
-                        <li>
-                            <a href="<%= following_user_path(@user) %>">
-                                <strong id="following" class="stat">
-                                <%= @user.following.count %>
-                                </strong>
-                                フォロー中のユーザー
-                            </a>    
-                        </li>
-                        <li>
-                            <a href="<%= followers_user_path(@user) %>">
-                                <strong id="followers" class="stat">
-                                <%= @user.followers.count %>
-                                </strong>
-                                フォローしてくれたユーザー
-                            </a>
-                        </li>
-                        <li>いいねした投稿一覧</li>
-                    </ul>
-                </section>
+        <div class="col-md-4 sidebar">
+            <%= image_tag 'default.png' %>
+            <p><%= @user.name %></p>
+            <div class="center">
+                <%= render 'partial/follow_form' %>
             </div>
-        </aside>
+            <ul>
+                <li>
+                    <a href="<%= following_user_path(@user) %>">
+                        <strong id="following" class="stat">
+                        <%= @user.following.count %>
+                        </strong>
+                        フォロー中のユーザー
+                    </a>    
+                </li>
+                <li>
+                    <a href="<%= followers_user_path(@user) %>">
+                        <strong id="followers" class="stat">
+                        <%= @user.followers.count %>
+                        </strong>
+                        フォローしてくれたユーザー
+                    </a>
+                </li>
+                <li>いいねした投稿一覧</li>
+            </ul>
+        </div>
         <div class="col-md-8">
             <p>投稿一覧</p>
         </div>
