Completion of the Like feature.

--- a/app/views/shared/_show_posts.html.erb
+++ b/app/views/shared/_show_posts.html.erb
@@ -22,7 +22,8 @@
 							<div class="border__line"></div>
 							<div class="reader-of-ui">
 								<div class="icon_ui">
-									<i class="fas fa-heart"></i>
+									<%# <i class="fas fa-heart"></i> %>
+									<%= render 'shared/like_form', post: post %>
 								</div>
 								<div class="border__line"></div>
 								<div class="post-user-profile">
