--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
 <% provide(:title, 'All posts') %>
 <h1>投稿一覧</h1>
-<%= render 'shared/show_posts' %>
+<%= render 'posts_list' %>
 <%= javascript_include_tag 'modal.js' %>
