--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,9 +1,9 @@
 <% unless current_user?(user) %>
   <div id="follow_form">
     <% if current_user.following?(user) %>
-      <%= render 'shared/unfollow', user: user %>
+      <%= render 'unfollow', user: user %>
     <% else %>
-      <%= render 'shared/follow', user: user %>
+      <%= render 'follow', user: user %>
     <% end %>
   </div>
 <% end %>
