Completion of the function

--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -49,6 +49,8 @@
 								</div>
 								<div class="clear"></div>
 								<div class="post__comment__ui">
+									<%= render 'comments/comment_form', post: post %>
+									<%= render 'comments/comment_list', post: post %>
 								</div>
 							</div>
 						</div>
