Comment function on posts completed and, Improving the layout of comments and posts

--- a/app/views/likes/_like_form.html.erb
+++ b/app/views/likes/_like_form.html.erb
@@ -1,5 +1,5 @@
 <% unless current_user?(post.user) %>
-  <span id="like_form-<%= post.id %>">
+  <span id="like-form-<%= post.id %>">
     <% if post.like?(current_user) %>
       <%= render 'likes/unlike', post: post %>
     <% else %>
