--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,12 +1,4 @@
-<%= form_for(post.comments.build) do |f| %>
-
-	<div><%= hidden_field_tag :post_id, post.id %></div>
-
-	<div class="field">
-		<%= f.text_area :content, placeholder: "comment..." %>
-	</div>
-
-	<div class="actions">
-		<%= f.submit "投降" %>
-	</div>
-<% end %>
+<span id="comment-<%= post.id %>" >
+	<%= render 'comments/comment_input_form', post: post %>
+	<%= render 'comments/comment_list', post: post %>
+</span>
