--- a/app/views/comments/_comment_list.html.erb
+++ b/app/views/comments/_comment_list.html.erb
@@ -1,8 +1,37 @@
-<% @comments = post.comments.all %>
-<% if @comments.present? %>
-	<% @comments.each do |comment| %>
-		<%= comment.content %>
+<div class="comment-list">
+	<% @comments = post.comments.all.reverse %>
+	<% if @comments.present? %>
+		<ul>
+			<% @comments.each do |comment| %>
+				<li class="comment-user">
+					<table>
+						<tr>
+							<td rowspan="3" class="comment-user-img">
+								<%= image_tag comment.user.profile_image.url %>
+							</td>
+							<td class="name">
+								<%= comment.user.name %>
+							</td>
+						</tr>
+						<tr>
+							<td class="content">
+								<%= safe_join(comment.content.split("\n"),tag(:br)) %>
+							</td>
+						</tr>
+						<% if current_user?(comment.user) %>
+							<tr>
+								<td class="comment-dalete-icon">
+									<%= link_to(comment, method: :delete, data: { confirm: "コメントを削除しますか？" }, remote: true) do %>
+										<i class="fas fa-trash"></i>
+									<% end %>
+								</td>
+							</tr>
+						<% end %>
+					</table>
+				</li>
+			<% end %>
+		</ul>
+	<% else %>
+		<p class="tac">コメントなし</p>
 	<% end %>
-<% else %>
-	コメントなし
-<% end %>
+</div>
