--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,4 +1,7 @@
 <%= form_for(post.likes.build, remote: true) do |f| %>
-    <div><%= hidden_field_tag :post_id, post.id %></div>
-    <%= f.submit "Like", class: "btn" %>
+  <div><%= hidden_field_tag :post_id, post.id %></div>
+	<label class="like">
+		<i class="fas fa-heart"></i>
+		<%= f.submit "Like", style: "display: none;" %>
+	</label>
 <% end %>
