--- a/app/views/likes/_unlike.html.erb
+++ b/app/views/likes/_unlike.html.erb
@@ -1,3 +1,6 @@
 <%= form_for(post.likes.find_by(user_id: current_user.id), method: :delete, remote: true) do |f| %>
-    <%= f.submit "Unlike", class: "btn" %>
+	<label class="unlike">
+			<i class="fas fa-heart"></i>
+			<%= f.submit "Unlike", style: "display: none;" %>
+	</label>
 <% end %>
