--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -1,60 +1,21 @@
 <div class="posts-list">
 	<% if @posts.present? %>
-		<ul>
+		<ul class="posts-list-ul">
 			<% @posts.each do |post| %>
 				<% if post.img? %>
-					<li>
+					<li class="posts-list-li">
 						<a class="js-modal-open" href="" data-target="modal-<%= post.id %>">
 							<%= image_tag post.img.url %>
 							<i class="fas fa-heart like-icon">
-								<span class="like_count-<%= post.id %>"><%= post.likes.count %></span>
+								<span id="like-count-<%= post.id %>"><%= post.likes.count %></span>
 							</i>
-							<i class="fas fa-comment comment-icon"> </i>
+							<i class="fas fa-comment comment-icon">
+								<span id="comment-count-<%= post.id %>"><%= post.comments.count %></span>
+							</i>
 						</a>
 					</li>
 					<%# モーダルウィンドウ %>
-					<div id="modal-<%= post.id %>" class="modal js-modal">
-						<div class="modal__bg js-modal-close"></div>
-						<div class="modal__content">
-						<%# モーダルウィンドウの内容 %>
-							<div class="image__content">
-								<h1><%= post.title %></h1>
-								<%= image_tag post.img.url %>
-							</div>
-							<div class="border__line"></div>
-							<div class="reader-of-ui">
-								<div class="icon_ui">
-									<%# <i class="fas fa-heart"></i> %>
-									<%= render 'likes/like_form', post: post %>
-									<span class="like_count-<%= post.id %>"><%= post.likes.count %></span>
-								</div>
-								<div class="border__line"></div>
-								<div class="post-user-profile">
-									<table>
-										<tr>
-											<td class="post-user-profile-img">
-												<%= image_tag post.user.profile_image.url %>
-											</td>
-											<td class="post-user-name-and-follower">
-												<h4><%= post.user.name %></h4>
-												<p>
-													<strong class="followers">
-														<%= @user.followers.count %>
-													</strong>
-													フォロワー
-												</p>
-											</td>
-										</tr>
-									</table>
-								</div>
-								<div class="clear"></div>
-								<div class="post__comment__ui">
-									<%= render 'comments/comment_form', post: post %>
-									<%= render 'comments/comment_list', post: post %>
-								</div>
-							</div>
-						</div>
-					</div>
+					<%= render 'posts/post_modal', post: post %>
 				<% end %>
 			<% end %>
 		</ul>
