--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,6 +15,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to 'サインアップ', new_user_registration_path %></li>
           <li><%= link_to 'ログイン', new_user_session_path %></li>
+          <li><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %></li>
+          <li><%= link_to 'テスターログイン', users_tester_sign_in_path, method: :post %></li>
         </ul>
       <% end %>
     </nav>
