コメントの編集機能追加

--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<span id="comment-<%= post.id %>" >
+<span id="comment-<%= post.id %>" class="comment-form-js" >
 	<%= render 'comments/comment_input_form', post: post %>
 	<%= render 'comments/comment_list', post: post %>
 </span>
