--- a/app/assets/stylesheets/coustom.scss
+++ b/app/assets/stylesheets/coustom.scss
@@ -531,7 +531,7 @@ footer {
                 border: none;
                 border-bottom: 1px solid $gray-medium-light;
                 width: 350px;
-                height: 30px;
+                height: 50px;
                 resize: none;
                 &:focus {
                   border-bottom: 1px solid black;
@@ -555,7 +555,6 @@ footer {
 
         .comment-list {
           width: 100%;
-          padding-top: 7px;
           border-top: double 2px $gray-medium-light;
 
           ul{
@@ -566,6 +565,7 @@ footer {
             .comment-user{
               width: 100%;
               height: auto;
+              margin-top: 6px;
               border-top: 1px solid $gray-medium-light;
               padding-top: 10px;
 
@@ -575,17 +575,45 @@ footer {
 
               .content {
                 padding: 7px 0 0 12px;
+
               }
 
-              .comment-dalete-icon{
-                padding-top: 14px;
-                font-size: 14px;
-                a {
-                  color: gray;
-                  cursor: pointer;
+              .display-comment{
+                .comment-edit-or-dalete-icon{
+                  padding-top: 14px;
+                  font-size: 14px;
+                  a {
+                    color: gray;
+                    cursor: pointer;
+                  }
+                  i {
+                    padding-left: 8px;
+                  }
                 }
-                i {
-                  padding-left: 15px;
+              }
+              .edit-comment{
+                .edit-comment-textarea{
+                  border: none;
+                  border-bottom: 1px solid $gray-medium-light;
+                  width: 350px;
+                  height: calc( 1.3em * 5 );
+                  line-height: 1.3;
+                  resize: none;
+                  &:focus {
+                    border-bottom: 1px solid black;
+                    outline: none;
+                  }
+                }
+                .update-or-cancel-btn {
+                  div{
+                    display: inline;
+                  }
+
+                  // .comment-update-btn{  
+                  // }
+
+                  // .comment-cancel-btn{
+                  // }
                 }
               }
             }
