--- a/app/assets/stylesheets/coustom.scss
+++ b/app/assets/stylesheets/coustom.scss
@@ -56,6 +56,10 @@ h2 {
   color: $gray-light;
 }
 
+ul {
+  list-style: none;
+}
+
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -72,19 +76,110 @@ p {
 
 /* header */
 
+header {
+  width: 100%;
+  height: 40px;
+  background-color: black;
+  #title {
+    padding: 5px 0 0 30px;
+    float: left;
+    #logo {
+      font-size: 1.7em;
+      color: white;
+      text-transform: uppercase;
+      letter-spacing: -1px;
+      padding-top: 9px;
+      font-weight: bold;
+      &:hover {
+        color: white;
+        text-decoration: none;
+      }
+    }
+  }
+  
+  ul{
+    text-align: center;
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
+    color: #fff;
+  }
 
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-  &:hover {
-    color: white;
-    text-decoration: none;
+  li{
+    max-width: 100px;
+    font-size: 0.9em;
+    position: relative;
+    padding: 5px;
+    display: block;
+    cursor: pointer;
+  }
+
+  .dropdwn{
+    float: right;
+    max-width: 100%;
+    display: flex;
+    padding-right: 15px;
+    
+    .user-menu-img{
+      padding-top: 4px;
+      padding-left: 40px;
+      img{
+        width: 30px;
+        height: 30px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+      i {
+        padding-left:5px;
+        color: white;
+      }
+    }
+    
+    >li{
+      width: 200px;
+      margin: 1px;
+      padding-top: 10px;
+      display: inline;
+      a{
+        color: white;
+        &:hover{
+          color: gray;
+          text-decoration: none;
+        }
+      }
+    }
+
+    .dropdwn_menu{
+      clear: both;
+      width: 100%;
+      display: none;
+      position: absolute;
+      margin-left: -15px;
+      margin-top: 6px;
+      border-radius: 6px;
+      background-color: $gray-medium-light;
+      li{
+        width: 100%;
+
+        a{
+          padding: 5px 0;
+          margin: -3px 0;
+          display: block;
+          color: black;
+
+          &:hover{
+            color: white;
+            text-decoration: none;
+          }
+        }
+
+        #logout-menu{
+          &:hover{
+            color: red;
+          }
+        }
+      }// li
+    }// dorpdwn_menu
   }
 }
 
@@ -109,7 +204,6 @@ footer {
   }
   ul {
     float: right;
-    list-style: none;
     background-color: aqua;
     li {
       float: left;
@@ -208,7 +302,6 @@ footer {
   width: 100%;
   max-width: 720px;
   ul {
-    list-style: none;
     li {
       min-width: 500px;
       height: 120px;
@@ -257,7 +350,6 @@ footer {
   width: 100%;
 
   .posts-list-ul {
-    list-style: none;
     max-width: 1000px;
     margin: 0 auto;
    
@@ -348,6 +440,34 @@ footer {
   }
 }
 
+.api-login-list {
+
+  padding: 0;
+  li {
+    border-radius: 5px;
+    margin: 0 auto;
+    width: 250px;
+    height: 30px;
+    font-size: 1.1em;
+    a {
+      display: block;
+      text-align: center;
+      padding: 0;
+      padding-top: 5px;
+      &:hover {
+        opacity: 0.7;
+        text-decoration: none;
+      }
+    }
+  }
+
+  #twitter{
+    background-color: #55acee;
+    a {
+      color: white;
+    }
+  }
+}
 
 /***********************************/
 /**** 　　　　js用　css            ***/
@@ -503,10 +623,15 @@ footer {
           }
 
           .post-user-name-and-follower{
-            width: 60%;
+            width: 100%;
             float: left;
             padding-top: 3px;
             padding-left: 15px;
+            a {
+              outline: none;
+              color: black;
+              cursor: pointer;
+            }
             p{
               font-size: 5px;
             }
@@ -559,7 +684,6 @@ footer {
 
           ul{
             padding: 0;
-            list-style: none;
             width: 100%;
 
             .comment-user{
@@ -571,6 +695,10 @@ footer {
 
               .name {
                 padding: 7px 0 0 7px;
+                a {
+                  color: black;
+                  cursor: pointer;
+                }
               }
 
               .content {
@@ -584,6 +712,7 @@ footer {
                   font-size: 14px;
                   a {
                     color: gray;
+                    text-decoration: none;
                     cursor: pointer;
                   }
                   i {
@@ -608,12 +737,6 @@ footer {
                   div{
                     display: inline;
                   }
-
-                  // .comment-update-btn{  
-                  // }
-
-                  // .comment-cancel-btn{
-                  // }
                 }
               }
             }
