--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -19,7 +19,17 @@
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
-  <% end %>
+  <ul class="api-login-list">
+    <%- resource_class.omniauth_providers.each do |provider| %>
+      <li id="<%= provider %>">
+        <%= link_to  omniauth_authorize_path(resource_name, provider) do %>
+          <div class="<%= provider %>">
+            <i class="fab fa-<%= provider %>">
+              <%= OmniAuth::Utils.camelize(provider) %>でログイン
+            </i>
+          </div>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
 <% end %>
