--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,4 +16,5 @@
     <%= render 'shared/footer' %>
     <%= debug(params) if Rails.env.development? %>
   </body>
+  <%= javascript_include_tag 'dropdwn.js' %>
 </html>
