--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'All posts') %>
+<%= render 'search' %>
 <h1>投稿一覧</h1>
 <%= render 'posts_list' %>
 <%= javascript_include_tag 'modal.js' %>
