--- a/app/views/posts/_post_modal.html.erb
+++ b/app/views/posts/_post_modal.html.erb
@@ -46,6 +46,11 @@
 				</table>
 			</div>
 			<div class="clear"></div>
+			<%# 投稿者のコメント %>
+			<div class="post-user-comment">
+				<%= safe_join(post.text.split("\n"),tag(:br)) %>
+			</div>
+			<%# コメント機能 %>
 			<div class="post__comment__ui">
 				<%= render 'comments/comment_form', post: post %>
 			</div>
