--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,27 +1,35 @@
 <header>
   <div id="title">
-    <%= link_to "Shoot everyday", "#", id: "logo" %>
+    <%= link_to "Shoot everyday", root_path, id: "logo" %>
   </div>
   <% if user_signed_in? %>
     <ul class="dropdwn">
       <li class="user-menu-img">
-        <%= image_tag current_user.profile_image.url %><i class="fas fa-angle-down"></i>
+        <%= image_tag current_user.profile_image.url %>
+        <i class="fas fa-angle-down"></i>
         <ul class="dropdwn_menu">
-          <li><%= link_to 'マイページ', user_path(current_user.id) %></li>
+          <li><%= link_to 'マイページ', current_user %></li>
           <li><%= link_to 'プロフィール変更', edit_user_registration_path %></li>
           <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, id: "logout-menu" %></li>
         </ul>
       </li>
-      <li class="new-post"><%= link_to '投稿', new_post_path %></li>
-      <li><%= link_to 'ユーザー一覧', users_path %></li>
-      <li><%= link_to '全ての投稿', posts_path %></li>
+      <li><%= link_to new_post_path do %><i class="fas fa-camera"></i><% end %></li>
+      <li><%= link_to users_path do %><i class="fas fa-users"></i><% end %></li>
+      <li><%= link_to posts_path do %><i class="fas fa-images"></i><% end %></li>
     </ul>
   <% else %>
     <ul class="dropdwn">
-      <li><%= link_to 'サインアップ', new_user_registration_path %></li>
-      <li><%= link_to 'ログイン', new_user_session_path %></li>
-      <li><%= link_to '簡単ログイン', users_guest_sign_in_path, method: :post %></li>
-      <li><%= link_to 'テスターログイン', users_tester_sign_in_path, method: :post %></li>
+      <li><%= link_to users_path do %><i class="fas fa-users"></i><% end %></li>
+      <li><%= link_to posts_path do %><i class="fas fa-images"></i><% end %></li>
+      <li class="login-or-signup-list">
+        <i class="fas fa-align-justify"></i>
+        <ul class="dropdwn_menu">
+          <li><%= link_to 'サインアップ', new_user_registration_path %></li>
+          <li><%= link_to 'ログイン', new_user_session_path %></li>
+          <li><%= link_to '簡単ログイン', users_guest_sign_in_path, method: :post %></li>
+          <li><%= link_to 'テスターログイン', users_tester_sign_in_path, method: :post %></li>
+        </ul>
+      </li>
     </ul>
   <% end %>
 </header>
