--- a/app/assets/stylesheets/coustom.scss
+++ b/app/assets/stylesheets/coustom.scss
@@ -742,7 +742,8 @@ $tab-size: ( $full-tab-size / 2 ) - $delimit-line-size;
     .image__content{
       text-align: center;
       margin-bottom: 10px;
-      h1{
+      h2{
+        font-size: 2.2em;
         padding-bottom: 10px;
         border-bottom: 1px solid $gray-medium-light;
       }
