--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,7 +2,7 @@
  <h1>新規投稿</h1>
  <div class="post-box">
     <%= form_for(@post) do |f| %>
-
+			<%= render 'layouts/error_messages', model: f.object %>
 			<div class="field">
 					<%= f.text_field :title, autofocus: true, autocomplete: "title", placeholder: "title" %>
 			</div>
