--- a/app/views/home/_guest.html.erb
+++ b/app/views/home/_guest.html.erb
@@ -27,7 +27,7 @@
     <li>
       <ul class="api-login-list">
         <li id="twitter">
-          <%= link_to user_twitter_omniauth_authorize_path do %>
+          <%= link_to user_twitter_omniauth_authorize_path, method: :post do %>
             <i class="fab fa-twitter">
               Twitterでログイン
             </i>
